--- a/index.html
+++ b/index.html
@@ -40,9 +40,40 @@
             padding: 20px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
+            cursor: pointer;
         }
         .project-card:hover {
             transform: scale(1.05);
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.7);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 10% auto;
+            padding: 20px;
+            border-radius: 10px;
+            width: 70%;
+            max-width: 600px;
+            position: relative;
+        }
+        .close-modal {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .close-modal:hover {
+            color: black;
         }
         #projects, #blender, #coding {
             margin-top: 30px;
@@ -56,15 +87,17 @@
     </header>
 
     <div class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Creative developer passionate about coding and 3D design</p>
-        </section>
-
         <section id="projects">
             <h2>Projects</h2>
             <div class="project-grid" id="projectGrid"></div>
         </section>
+    </div>
+
+    <div id="projectModal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <div id="modalDetails"></div>
+        </div>
     </div>
 
     <script>
@@ -73,34 +106,71 @@
                 type: 'Coding',
                 title: 'Web App',
                 description: 'Interactive project demonstrating web development skills',
-                technologies: ['HTML', 'CSS', 'JavaScript']
+                technologies: ['HTML', 'CSS', 'JavaScript'],
+                fullDetails: 'Developed a comprehensive web application showcasing responsive design and interactive features. Implemented modern web technologies to create a seamless user experience.'
             },
             {
                 type: 'Blender',
                 title: '3D Character Model',
                 description: 'Detailed character render showing modeling skills',
-                techniques: ['Modeling', 'Texturing', 'Lighting']
+                techniques: ['Modeling', 'Texturing', 'Lighting'],
+                fullDetails: 'Created a high-fidelity 3D character model with intricate texturing and advanced lighting techniques. Demonstrates proficiency in Blender and 3D character design.'
             },
             {
                 type: 'Coding',
                 title: 'Data Visualization',
                 description: 'Interactive dashboard with complex data displays',
-                technologies: ['React', 'D3.js', 'ChartJS']
+                technologies: ['React', 'D3.js', 'ChartJS'],
+                fullDetails: 'Built an interactive data visualization dashboard using React and advanced charting libraries. Transformed complex data into intuitive, visually appealing graphics.'
             }
         ];
 
         function renderProjects() {
             const projectGrid = document.getElementById('projectGrid');
-            projects.forEach(project => {
+            projects.forEach((project, index) => {
                 const card = document.createElement('div');
                 card.classList.add('project-card');
+                card.dataset.index = index;
                 card.innerHTML = `
                     <h3>${project.title}</h3>
                     <p>${project.description}</p>
                     <small>${project.type} Project</small>
                 `;
+                card.addEventListener('click', openModal);
                 projectGrid.appendChild(card);
             });
+        }
+
+        const modal = document.getElementById('projectModal');
+        const modalDetails = document.getElementById('modalDetails');
+        const closeModal = document.querySelector('.close-modal');
+
+        function openModal(e) {
+            const projectIndex = e.currentTarget.dataset.index;
+            const project = projects[projectIndex];
+            
+            modalDetails.innerHTML = `
+                <h2>${project.title}</h2>
+                <p>${project.fullDetails}</p>
+                <h3>Technologies/Techniques:</h3>
+                <ul>${
+                    (project.technologies || project.techniques)
+                        .map(tech => `<li>${tech}</li>`)
+                        .join('')
+                }</ul>
+            `;
+            
+            modal.style.display = 'block';
+        }
+
+        closeModal.onclick = function() {
+            modal.style.display = 'none';
+        }
+
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = 'none';
+            }
         }
 
         renderProjects();
