--- a/index.html
+++ b/index.html
@@ -1,179 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 20px;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding-top: 30px;
-            min-height: 70px;
-            text-align: center;
-        }
-        .project-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .project-card {
-            background: white;
-            border-radius: 5px;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-            cursor: pointer;
-        }
-        .project-card:hover {
-            transform: scale(1.05);
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.7);
-        }
-        .modal-content {
-            background-color: #fefefe;
-            margin: 10% auto;
-            padding: 20px;
-            border-radius: 10px;
-            width: 70%;
-            max-width: 600px;
-            position: relative;
-        }
-        .close-modal {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        .close-modal:hover {
-            color: black;
-        }
-        #projects, #blender, #coding {
-            margin-top: 30px;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="container">
-        <h1>My Portfolio</h1>
-        <p>Showcasing Coding and Blender Projects</p>
+      <h1>My Portfolio</h1>
+      <p>Showcasing Coding and Blender Projects</p>
     </header>
 
     <div class="container">
-        <section id="projects">
-            <h2>Projects</h2>
-            <div class="project-grid" id="projectGrid"></div>
-        </section>
+      <section id="projects">
+        <h2>Projects</h2>
+        <div class="project-grid" id="projectGrid"></div>
+      </section>
     </div>
 
     <div id="projectModal" class="modal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <div id="modalDetails"></div>
-        </div>
+      <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <div id="modalDetails"></div>
+      </div>
     </div>
-
-    <script>
-        const projects = [
-            {
-                type: 'Coding',
-                title: 'Web App',
-                description: 'Interactive project demonstrating web development skills',
-                technologies: ['HTML', 'CSS', 'JavaScript'],
-                fullDetails: 'Developed a comprehensive web application showcasing responsive design and interactive features. Implemented modern web technologies to create a seamless user experience.'
-            },
-            {
-                type: 'Blender',
-                title: '3D Character Model',
-                description: 'Detailed character render showing modeling skills',
-                techniques: ['Modeling', 'Texturing', 'Lighting'],
-                fullDetails: 'Created a high-fidelity 3D character model with intricate texturing and advanced lighting techniques. Demonstrates proficiency in Blender and 3D character design.'
-            },
-            {
-                type: 'Coding',
-                title: 'Data Visualization',
-                description: 'Interactive dashboard with complex data displays',
-                technologies: ['React', 'D3.js', 'ChartJS'],
-                fullDetails: 'Built an interactive data visualization dashboard using React and advanced charting libraries. Transformed complex data into intuitive, visually appealing graphics.'
-            }
-        ];
-
-        function renderProjects() {
-            const projectGrid = document.getElementById('projectGrid');
-            projects.forEach((project, index) => {
-                const card = document.createElement('div');
-                card.classList.add('project-card');
-                card.dataset.index = index;
-                card.innerHTML = `
-                    <h3>${project.title}</h3>
-                    <p>${project.description}</p>
-                    <small>${project.type} Project</small>
-                `;
-                card.addEventListener('click', openModal);
-                projectGrid.appendChild(card);
-            });
-        }
-
-        const modal = document.getElementById('projectModal');
-        const modalDetails = document.getElementById('modalDetails');
-        const closeModal = document.querySelector('.close-modal');
-
-        function openModal(e) {
-            const projectIndex = e.currentTarget.dataset.index;
-            const project = projects[projectIndex];
-            
-            modalDetails.innerHTML = `
-                <h2>${project.title}</h2>
-                <p>${project.fullDetails}</p>
-                <h3>Technologies/Techniques:</h3>
-                <ul>${
-                    (project.technologies || project.techniques)
-                        .map(tech => `<li>${tech}</li>`)
-                        .join('')
-                }</ul>
-            `;
-            
-            modal.style.display = 'block';
-        }
-
-        closeModal.onclick = function() {
-            modal.style.display = 'none';
-        }
-
-        window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = 'none';
-            }
-        }
-
-        renderProjects();
-    </script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
