added com's of area

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <p>Showcasing Coding and Blender Projects</p>
     </header>
 
+    <!-- section for thr grid project -->
     <div class="container">
       <section id="projects">
         <h2>Projects</h2>
@@ -19,12 +20,14 @@
       </section>
     </div>
 
+    <!-- display modal when click -->
     <div id="projectModal" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
         <div id="modalDetails"></div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
