--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       </div>
     </div>
 
+    <!-- copyright section -->
+    <footer>
+      <p class="cp-text">
+        © Copyright 2025 Projeckt Aqua. All rights reserved.
+      </p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
