added more section

--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
       <p>Showcasing Coding and Blender Projects</p>
     </header>
 
-    <!-- section for thr grid project -->
+    <!-- section for the intro text -->
+    <section class="container">
+      <h2>Introduction</h2>
+      <p></p>
+    </section>
+    <!-- section for the skill note -->
+    <section class="container">
+      <h2>Skills</h2>
+      <p></p>
+    </section>
+    <!-- section for the grid project -->
     <div class="container">
       <section id="projects">
         <h2>Projects</h2>
         <div class="project-grid" id="projectGrid"></div>
       </section>
     </div>
+    <!-- form for contact -->
+    <section class="container">
+      <h2>Get in Touch</h2>
+    </section>
 
     <!-- display modal when click -->
     <div id="projectModal" class="modal">
