added text for the introduction

--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
     <!-- section for the intro text -->
     <section class="container">
       <h2>Introduction</h2>
-      <p></p>
+      <p>
+        Hello, I'm <strong>Valentyn,</strong> a 25-year-old passionate about
+        <strong>coding and 3D modeling.</strong> With a strong interest in
+        technology and art, I've been exploring the intersection of these two
+        fields to create innovative and visually stunning projects. On this
+        portfolio, I'll be showcasing my coding and 3D modeling endeavors, from
+        conceptualization to completion. Take a look around and discover the
+        projects that I'm proud to call my own.
+      </p>
     </section>
     <!-- section for the skill note -->
     <section class="container">
