--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="burger.css" />
+    <link rel="stylesheet" href="skill.css" />
   </head>
   <body>
     <header class="container">
@@ -41,7 +42,16 @@
     <!-- section for the skill note -->
     <section class="container">
       <h2>Skills</h2>
-      <p></p>
+      <p>HTML</p>
+        <div class="skills html">90%</div>
+      </div>
+      <p>CSS</p>
+        <div class="skills css">80%</div>
+      </div>
+      <p>JavaScript</p>
+        <div class="skills js">65%</div>
+      </div>
+
     </section>
     <!-- section for the grid project -->
     <div class="container">
