added blender graph

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       <p>CSS</p>
         <div class="skills css">80%</div>
       </div>
+      <p>Blender</p>
+      <div class="skills blender">70%</div>
+      </div>
       <p>JavaScript</p>
         <div class="skills js">50%</div>
       </div>
