added WIP section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
         <div class="project-grid" id="projectGrid"></div>
       </section>
     </div>
+
+    <!-- WIP -->
+    <div class="container">
+      <section id="wIP">
+        <h2>W.I.P</h2>
+        <div class="project-grid" id="projectGrid"></div>
+      </section>
+    </div>
     <!-- form for contact -->
     <section class="container">
       <h2>Get in Touch</h2>
