--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         </svg></p>
         <div class="skills js">50%</div>
       </div>
+      <p> C++ </p>
+        <div class="skills Cplusplus">20%</div>
+      </div>
 
     </section>
     <!-- section for the grid project -->
@@ -76,6 +79,7 @@
         <div class="project-grid" id="projectGrid"></div>
       </section>
     </div>
+    
     <!-- form for contact -->
     <section class="container">
       <h2>Get in Touch</h2>
