--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="burger.css" />
-    <link rel="stylesheet" href="skill.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/burger.css" />
+    <link rel="stylesheet" href="/css/skill.css" />
+    <link rel="stylesheet" href="/css/contact.css" />
   </head>
   <body>
     <header class="container">
@@ -75,17 +76,10 @@
     </div>
 
     <!-- WIP -->
-    <div class="container">
-      <section id="wIP">
-        <h2>W.I.P</h2>
-        <div class="project-grid" id="projectGrid"></div>
-      </section>
-    </div>
+
     
     <!-- form for contact -->
-    <section class="container">
-      <h2>Get in Touch</h2>
-    </section>
+
 
     <!-- display modal when click -->
     <div id="projectModal" class="modal">
@@ -96,12 +90,12 @@
     </div>
 
     <!-- copyright section -->
-    <footer>
+    <!-- <footer>
       <p class="cp-text">
         © Copyright 2025 Projeckt Aqua. All rights reserved.
       </p>
-    </footer>
-    <script src="script.js"></script>
-    <script src="burger.js"></script>
+    </footer> -->
+    <script src="/js/script.js"></script>
+    <script src="/js/burger.js"></script>
   </body>
 </html>
