--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">My Work</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <!-- section for the intro text -->
