added WIP section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,29 @@
     </div>
 
     <!-- WIP -->
-
+<!-- section for the WIP projects -->
+<div class="container">
+  <section id="wip">
+    <h2>Work in Progress</h2>
+    <div class="wip-grid">
+      <!-- WIP project 1 -->
+      <div class="wip-project">
+        <img src="wip-project-1.jpg" alt="WIP Project 1">
+        <h3>Project 1: Pacman</h3>
+        <p>i remade a pacman using Javascript</p>
+        <a href="https://github.com/Zenumium/Pacman" target="_blank">View on GitHub</a>
+      </div>
+      <!-- WIP project 2 -->
+      <div class="wip-project">
+        <img src="wip-project-2.jpg" alt="WIP Project 2">
+        <h3>Project 2: Guitar hero Like (W.I.P)</h3>
+        <p>a Guitar hero like remade using Javascript</p>
+        <a href="https://github.com/Zenumium/rythm-game" target="_blank">View on GitHub</a>
+      </div>
+      <!-- Add more WIP projects here -->
+    </div>
+  </section>
+</div>
     
     <!-- form for contact -->
 
