added picture preview

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
     <div class="wip-grid">
       <!-- WIP project 1 -->
       <div class="wip-project">
-        <img src="wip-project-1.jpg" alt="WIP Project 1">
+        <img src="/image/Pacman-Project.png" alt="WIP Project 1">
         <h3>Project 1: Pacman</h3>
         <p>i remade a pacman using Javascript</p>
         <a href="https://github.com/Zenumium/Pacman" target="_blank">View on GitHub</a>
       </div>
       <!-- WIP project 2 -->
       <div class="wip-project">
-        <img src="wip-project-2.jpg" alt="WIP Project 2">
+        <img src="/image/Guitar-hero(WIP).png" alt="WIP Project 2">
         <h3>Project 2: Guitar hero Like (W.I.P)</h3>
         <p>a Guitar hero like remade using Javascript</p>
         <a href="https://github.com/Zenumium/rythm-game" target="_blank">View on GitHub</a>
@@ -100,9 +100,6 @@
   </section>
 </div>
     
-    <!-- form for contact -->
-
-
     <!-- display modal when click -->
     <div id="projectModal" class="modal">
       <div class="modal-content">
