--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <!-- section for the skill note -->
     <section class="container">
       <h2>Skills </h2>
-      <p>HTML <i class="fa fa-html5" aria-hidden="true"></i> </p>
+      <p>HTML5 <i class="fa fa-html5" aria-hidden="true"></i> </p>
         <div class="skills html">60%</div>
       </div>
-      <p>CSS <i class="fa fa-css3" aria-hidden="true"></i></p>
+      <p>CSS 3 <i class="fa fa-css3" aria-hidden="true"></i></p>
         <div class="skills css">80%</div>
       </div>
       <p>Blender <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 64 64">
@@ -68,38 +68,42 @@
 
     </section>
     <!-- section for the grid project -->
-    <div class="container">
-      <section id="projects">
-        <h2>Projects</h2>
-        <div class="project-grid" id="projectGrid"></div>
-      </section>
-    </div>
-
-    <!-- WIP -->
 <!-- section for the WIP projects -->
 <div class="container">
   <section id="wip">
-    <h2>Work in Progress</h2>
+    <h2>Projects</h2>
     <div class="wip-grid">
       <!-- WIP project 1 -->
       <div class="wip-project">
         <img src="/image/Pacman-Project.png" alt="WIP Project 1">
         <h3>Project 1: Pacman</h3>
-        <p>i remade a pacman using Javascript</p>
+        <p>i remade a pacman using <strong>HTML5,CSS3,Javascript</strong></p>
         <a href="https://github.com/Zenumium/Pacman" target="_blank">View on GitHub</a>
       </div>
       <!-- WIP project 2 -->
       <div class="wip-project">
         <img src="/image/Guitar-hero(WIP).png" alt="WIP Project 2">
         <h3>Project 2: Guitar hero Like (W.I.P)</h3>
-        <p>a Guitar hero like remade using Javascript</p>
+        <p>a Guitar hero like remade using <strong>HTML5,CSS3,Javascript</strong></p>
         <a href="https://github.com/Zenumium/rythm-game" target="_blank">View on GitHub</a>
       </div>
+            <!-- WIP project 3 -->
+            <div class="wip-project">
+              <img src="/image/Login_page.png" alt="WIP Project 3">
+              <h3>Project 3: test Login (W.I.P)</h3>
+              <p>a project, i made early on using <strong>HTML5 and CSS3</strong></p>
+              <a href="https://github.com/Zenumium/test_login" target="_blank">View on GitHub</a>
+            </div>
       <!-- Add more WIP projects here -->
     </div>
   </section>
 </div>
-    
+<div class="container">
+  <section id="projects">
+    <h2>Learn more about me </h2>
+    <div class="project-grid" id="projectGrid"></div>
+  </section>
+</div>  
     <!-- display modal when click -->
     <div id="projectModal" class="modal">
       <div class="modal-content">
