--- a/index.html
+++ b/index.html
@@ -94,7 +94,14 @@
               <p>a project, i made early on using <strong>HTML5 and CSS3</strong></p>
               <a href="https://github.com/Zenumium/test_login" target="_blank">View on GitHub</a>
             </div>
-      <!-- Add more WIP projects here -->
+
+              <!-- WIP project 4 -->
+            <div class="wip-project">
+              <img src="/image/Doom.js.png" alt="WIP Project 4">
+              <h3>Project 3: test Login (W.I.P)</h3>
+              <p>a project, i made early on using <strong>HTML5 and CSS3</strong></p>
+              <a href="https://editor.p5js.org/Zenumium/sketches/A-oi1w1ts" target="_blank">View on p5js</a>
+            </div>
     </div>
   </section>
 </div>
@@ -122,3 +129,6 @@
     <script src="/js/burger.js"></script>
   </body>
 </html>
+
+
+https://editor.p5js.org/Zenumium/sketches/A-oi1w1ts
