--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="wip-project">
               <img src="/image/Doom.js.png" alt="WIP Project 4">
               <h3>Project 3: test Login (W.I.P)</h3>
-              <p>a project, i made early on using <strong>HTML5 and CSS3</strong></p>
+              <p>a project, i made using <strong>HTML5,CSS3,JAvascript and p5js library</strong></p>
               <a href="https://editor.p5js.org/Zenumium/sketches/A-oi1w1ts" target="_blank">View on p5js</a>
             </div>
     </div>
