--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <!-- WIP project 4 -->
             <div class="wip-project">
               <img src="/image/Doom.js.png" alt="WIP Project 4">
-              <h3>Project 3: Doom.js using p5library</h3>
+              <h3>Project 3: Doom.js using p5library(W.I.P)</h3>
               <p>a project, i made using <strong>HTML5,CSS3,JAvascript and p5js library</strong></p>
               <a href="https://editor.p5js.org/Zenumium/sketches/A-oi1w1ts" target="_blank">View on p5js</a>
             </div>
