--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header class="container">
       <h1>My Portfolio</h1>
       <p>Showcasing Coding and Blender Projects</p>
+      <img id="can"src="/headerimg/can.png">
     </header>
     <!-- Add a button to toggle the menu -->
     <button class="burger-menu">
