--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <!-- WIP project 2 -->
       <div class="wip-project">
         <img src="/image/Guitar-hero(WIP).png" alt="WIP Project 2">
-        <h3>Project 2: Guitar hero Like (W.I.P)</h3>
+        <h3>Project 2: rhythm-game (W.I.P)</h3>
         <p>a Guitar hero like remade using <strong>HTML5,CSS3,Javascript</strong></p>
         <a href="https://github.com/Zenumium/rythm-game" target="_blank">View on GitHub</a>
       </div>
