section contact added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
       </div>
 
     </section>
-    <!-- section for the grid project -->
 <!-- section for the WIP projects -->
 <div class="container">
   <section id="wip">
@@ -131,7 +130,12 @@
         <div id="modalDetails"></div>
       </div>
     </div>
-
+<!-- section for the info contact -->
+ <div class="container">
+  <section id="contact">
+    <h2>Get in touch</h2>
+  </section>
+ </div>
     <!-- copyright section -->
     <!-- <footer>
       <p class="cp-text">
