--- a/index.html
+++ b/index.html
@@ -134,14 +134,61 @@
  <div class="container">
   <section id="contact">
     <h2>Get in touch</h2>
+    <p>Want to get in touch? Fill out the form below:</p>
+
+    <div class="container">
+      <form action="action_page.php">
+        <div class="row">
+          <div class="col-25">
+            <label for="fname">First Name</label>
+          </div>
+          <div class="col-75">
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="lname">Last Name</label>
+          </div>
+          <div class="col-75">
+            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="country">Country</label>
+          </div>
+          <div class="col-75">
+            <select id="country" name="country">
+              <option value="australia">Australia</option>
+              <option value="canada">Canada</option>
+              <option value="usa">USA</option>
+              <option value="france">France</option>
+
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="subject">Subject</label>
+          </div>
+          <div class="col-75">
+            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <input type="submit" value="Submit">
+        </div>
+      </form>
+    </div>
   </section>
  </div>
     <!-- copyright section -->
-    <!-- <footer>
+    <footer>
       <p class="cp-text">
         © Copyright 2025 Projeckt Aqua. All rights reserved.
       </p>
-    </footer> -->
+    </footer>
     <script src="/js/script.js"></script>
     <script src="/js/burger.js"></script>
   </body>
