--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
     <p>Want to get in touch? Fill out the form below:</p>
 
     <div class="container">
-      <form action="action_page.php">
+      <form action="#">
         <div class="row">
           <div class="col-25">
-            <label for="fname">First Name</label>
+            <label for="fname"><strong>First Name</strong></label>
           </div>
           <div class="col-75">
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -148,7 +148,7 @@
         </div>
         <div class="row">
           <div class="col-25">
-            <label for="lname">Last Name</label>
+            <label for="lname"><strong>Last Name</strong></label>
           </div>
           <div class="col-75">
             <input type="text" id="lname" name="lastname" placeholder="Your last name..">
@@ -156,7 +156,7 @@
         </div>
         <div class="row">
           <div class="col-25">
-            <label for="country">Country</label>
+            <label for="country"><strong>Country</strong></label>
           </div>
           <div class="col-75">
             <select id="country" name="country">
@@ -170,7 +170,7 @@
         </div>
         <div class="row">
           <div class="col-25">
-            <label for="subject">Subject</label>
+            <label for="subject"><strong>Subject</strong></label>
           </div>
           <div class="col-75">
             <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
