--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
           </div>
           <div class="col-75">
             <select id="country" name="country">
-              <option value="australia">Australia</option>
-              <option value="canada">Canada</option>
-              <option value="usa">USA</option>
-              <option value="france">France</option>
+              <option value="australia"> France</option>
+              <option value="canada">USA</option>
+              <option value="usa">Canada</option>
+              <option value="france">Australia</option>
 
             </select>
           </div>
