--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/image/favicon.png" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="./image/favicon.png" sizes="any" type="image/svg+xml">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/burger.css" />
-    <link rel="stylesheet" href="/css/skill.css" />
-    <link rel="stylesheet" href="/css/contact.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/burger.css" />
+    <link rel="stylesheet" href="./css/skill.css" />
+    <link rel="stylesheet" href="./css/contact.css" />
   </head>
   <body>
     <header class="container">
@@ -87,14 +87,14 @@
       </div>
       <!-- WIP project 2 -->
       <div class="wip-project">
-        <img src="/image/music_game.png" alt="WIP Project 2">
+        <img src="./image/music_game.png" alt="WIP Project 2">
         <h3>Project 2: rhythm-game (W.I.P)</h3>
         <p>a Guitar hero like remade using <strong>HTML5,CSS3,Javascript</strong></p>
         <a href="https://github.com/Zenumium/rythm-game" target="_blank">View on GitHub</a>
       </div>
             <!-- WIP project 3 -->
             <div class="wip-project">
-              <img src="/image/login.png" alt="WIP Project 3">
+              <img src="./image/login.png" alt="WIP Project 3">
               <h3>Project 3: test Login (W.I.P)</h3>
               <p>a project, i made early on using <strong>HTML5 and CSS3</strong></p>
               <a href="https://github.com/Zenumium/test_login" target="_blank">View on GitHub</a>
@@ -102,14 +102,14 @@
 
               <!-- WIP project 4 -->
             <div class="wip-project">
-              <img src="/image/doom.png" alt="WIP Project 4">
+              <img src="./image/doom.png" alt="WIP Project 4">
               <h3>Project 4: Doom.js using p5library (W.I.P)</h3>
               <p>a project, i made using <strong>HTML5,CSS3,JAvascript and p5js library</strong></p>
               <a href="https://editor.p5js.org/Zenumium/sketches/A-oi1w1ts" target="_blank">View on p5js</a>
             </div>
              <!-- WIP project 5 -->
             <div class="wip-project">
-              <img src="/image/space_invader.png" alt="WIP Project 5">
+              <img src="./image/space_invader.png" alt="WIP Project 5">
               <h3>Project 5: Space Attack (current project)</h3>
               <p>project, i made using <strong>HTML5,CSS3,Javascript</strong></p>
               <a href="https://github.com/Zenumium/Space-attack" target="_blank">View on Github</a>
@@ -189,7 +189,7 @@
         © Copyright 2025 Projeckt Aqua. All rights reserved.
       </p>
     </footer>
-    <script src="/js/script.js"></script>
-    <script src="/js/burger.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/burger.js"></script>
   </body>
 </html>
