--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="wip-grid">
       <!-- WIP project 1 -->
       <div class="wip-project">
-        <img src="/image/pacman.png" alt="WIP Project 1">
+        <img src="./image/pacman.png" alt="WIP Project 1">
         <h3>Project 1: Pacman</h3>
         <p>i remade a pacman using <strong>HTML5,CSS3,Javascript</strong></p>
         <a href="https://github.com/Zenumium/Pacman" target="_blank">View on GitHub</a>
