--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/burger.css" />
-    <link rel="stylesheet" href="./css/skill.css" />
+    <link rel="stylesheet" href="./css/skills.css" />
     <link rel="stylesheet" href="./css/contact.css" />
   </head>
   <body>
