--- a/index.html
+++ b/index.html
@@ -157,7 +157,36 @@
     <div class="container">
       <section id="projects">
         <h2>Learn more about me</h2>
-        <div class="project-grid" id="projectGrid"></div>
+        <div class="wip-project">
+          <img src="./image/github.png" alt="ArtStation Image" />
+          <h3>My Github</h3>
+          <p>Got to my Github</p>
+          <a href="https://www.artstation.com/projecktaqua" target="_blank"
+            >View my Github</a
+          >
+          >
+        </div>
+        <!-- Project 2 -->
+        <div class="wip-project">
+          <img src="./image/artstation.png" alt="ArtStation Image" />
+          <h3>My artstation</h3>
+          <p>Go to my artstation, where i post about my 3d Work</p>
+          <a href="https://www.artstation.com/projecktaqua" target="_blank"
+            >View my ArtStation</a
+          >
+        </div>
+        <!-- Project 3 -->
+        <div class="wip-project">
+          <img src="./image/linkedin.png" alt="ArtStation Image" />
+          <h3>My Linkedin</h3>
+          <p>You can also find me in Linkedin</p>
+          <a
+            href="https://www.linkedin.com/in/valentyn-louvier-539993289/"
+            target="_blank"
+            >View my Linkedin</a
+          >
+        </div>
+        <!-- <div class="project-grid" id="projectGrid"></div> -->
       </section>
     </div>
     <!-- display modal when click -->
