--- a/index.html
+++ b/index.html
@@ -52,39 +52,48 @@
         <!-- Skill 1 -->
         <div class="skill">
           <img src="./image/HTML5.png" alt="HTML5" />
+          <span class="skill-name">HTML5</span>
         </div>
         <!-- Skill 2 -->
         <div class="skill">
           <img src="./image/CSS3.png" alt="CSS3" />
+          <span class="skill-name">CSS3</span>
         </div>
         <!-- Skill 3 -->
         <div class="skill">
           <img src="./image/javascript.png" alt="JavaScript" />
+          <span class="skill-name">JavaScript</span>
         </div>
         <!-- Skill 4 -->
         <div class="skill">
           <img src="./image/docker.png" alt="p5.js" />
+          <span class="skill-name">Docker</span>
         </div>
         <!-- Skill 5 -->
         <div class="skill">
           <img src="./image/blender.png" alt="Blender" />
+          <span class="skill-name">Blender</span>
         </div>
 
         <!-- Skill 6 -->
         <div class="skill">
           <img src="./image/unity.png" alt="Unity" />
+          <span class="skill-name">Unity</span>
         </div>
         <!-- skill 7 -->
         <div class="skill">
           <img src="./image/golang.png" alt="Golang" />
+          <span class="skill-name">Golang</span>
         </div>
         <!-- Skill 8 -->
         <div class="skill">
           <img src="./image/photoshop.png" alt="photoshop" />
+          <span class="skill-name">Photoshop</span>
         </div>
         <!-- Skill 9 -->
         <div class="skill">
           <img src="./image/pt.png" alt="pt" />
+          <span class="skill-name">Subtance Painter</span>
         </div>
       </div>
     </section>
