--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
       <section id="projects">
         <h2>Learn more about me</h2>
         <div class="wip-project">
-          <img src="./image/github.png" alt="ArtStation Image" />
+          <img src="./image/github.png" alt="Github Image" />
           <h3>My Github</h3>
           <p>Got to my Github</p>
-          <a href="https://www.artstation.com/projecktaqua" target="_blank"
+          <a href="https://github.com/Zenumium" target="_blank"
             >View my Github</a
           >
         </div>
